--- a/catBios.html
+++ b/catBios.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Cat Scratch Believer</title>
 </head>
-<body>
+<body class="root">
 
 	<div class="catDisplay"><img><h1>Cat 1</h1></div>
 	<div class="catDisplay"><img><h1>Cat 2</h1></div>
@@ -13,6 +13,6 @@
 	<div class="catDisplay"><img><h1>Cat 5</h1></div>
 	<div class="catDisplay"><img><h1>Cat 6</h1></div>
 
-
+	<script src="catBios.js" type="text/javascript"></script>
 </body>
 </html>
