--- a/catBios.html
+++ b/catBios.html
@@ -2,16 +2,20 @@
 <html>
 <head>
 	<title>Cat Scratch Believer</title>
+	<link rel="stylesheet" type="text/css" href="catBios.css">
 </head>
 <body class="root">
 
-	<div class="catDisplay"><img><h1>Cat 1</h1></div>
-	<div class="catDisplay"><img><h1>Cat 2</h1></div>
-	<div class="catDisplay"><img><h1>Cat 3</h1></div>
 
-	<div class="catDisplay"><img><h1>Cat 4</h1></div>
-	<div class="catDisplay"><img><h1>Cat 5</h1></div>
-	<div class="catDisplay"><img><h1>Cat 6</h1></div>
+<!-- find cat pics and save them into the git hub -->
+
+	<div class="catBios"><img><h1>Cat 1</h1></div>
+	<div class="catBios"><img><h1>Cat 2</h1></div>
+	<div class="catBios"><img><h1>Cat 3</h1></div>
+
+	<div class="catBios"><img><h1>Cat 4</h1></div>
+	<div class="catBios"><img><h1>Cat 5</h1></div>
+	<div class="catBios"><img><h1>Cat 6</h1></div>
 
 	<script src="catBios.js" type="text/javascript"></script>
 </body>
