--- a/catBios.html
+++ b/catBios.html
@@ -4,6 +4,7 @@
 	<title>Flexbox Practice</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Anton|Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="catBios.css">
 </head>
 <body>
@@ -17,12 +18,12 @@
 		<div class="colorbtm4"></div>
 	</h2>
 
-  	<div class="container-1">
+  	<div class="container-1 bio_font">
 
 		<div class="box">
 			<div class="card">
 				<div class="img cat1"></div>
-				<div class="cat1__bio">
+				<div class="cat__bio">
 					<h3>~Skip~</h3>
 					<p>Stare at the wall, play with food and get confused by dust sit in box, scamper and knock dish off table head butt cant eat out of my own dish head nudges immediately regret falling into bathtub yet get video posted to internet for chasing red dot.</p>
 				</div>	
@@ -32,7 +33,7 @@
 		<div class="box">
 			<div class="card">
 				<div class="img cat2"></div>
-				<div class="cat1__bio">
+				<div class="cat__bio">
 					<h3>~Sunny~</h3>
 					<p>Attack dog, run away and pretend to be victim white cat sleeps on a black shirt ask to go outside and ask to come inside and ask to go outside and ask to come inside caticus cuteicus lie on your belly and purr when you are asleep yet plan steps for world domination but chew on cable.</p>
 				</div>	
@@ -42,7 +43,7 @@
 		<div class="box">
 			<div class="card">
 				<div class="img cat3"></div>
-				<div class="cat1__bio">
+				<div class="cat__bio">
 					<h3>~Chester~</h3>
 					<p>Licks your face scream for no reason at 4 am but hunt by meowing loudly at 5am next to human slave food dispenser and crash against wall but walk away like nothing happened meow meow, i tell my human.</p>
 				</div>	
@@ -52,7 +53,7 @@
 		<div class="box">
 			<div class="card">
 				<div class="img cat4"></div>
-				<div class="cat1__bio">
+				<div class="cat__bio">
 					<h3>~Buckwheat~</h3>
 					<p>Pooping rainbow while flying in a toasted bread costume in space wake up human for food at 4am sleep on my human's head meow to be let in but cats go for world domination meow all night or i like big cats and i can not lie. </p>
 				</div>	
@@ -62,7 +63,7 @@
 		<div class="box">
 			<div class="card">
 				<div class="img cat5"></div>
-				<div class="cat1__bio">
+				<div class="cat__bio">
 					<h3>~Gizmo~</h3>
 					<p>Purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table eat too much then proceed to regurgitate all over living room carpet while humans eat dinner so steal the warm chair right after you get up howl uncontrollably for no reason</p>
 				</div>	
@@ -72,7 +73,7 @@
 		<div class="box">
 			<div class="card">
 				<div class="img cat6"></div>
-				<div class="cat1__bio">
+				<div class="cat__bio">
 					<h3>~Scrubbie~</h3>
 					<p>drink water out of the faucet demand to be let outside at once, and expect owner to wait for me as i think about it i could pee on this if i had the energy.
 					</p>
