--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Anton|Lobster" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="catBios.css">
+	<script src="https://use.fontawesome.com/c05d9499e5.js"></script>
 </head>
 <body>
   
@@ -83,6 +84,27 @@
 
 	</div>
 
-  <h3 class="footer"> ~meow~ </h3>
+  
+  <h6>
 </body>
+<footer class="footer">
+<h4 class="footlabel"> ~meowed by~ </h4>
+
+<div class="footcontainer">
+<h6 class="footext">Nathan Sheryak</h6>
+<a href="https://github.com/N8ers">
+	<i class="fa fa-github" aria-hidden="true"></i></a>
+<a href="https://twitter.com/NathanAdventuer?lang=en">
+	<i class="fa fa-twitter" aria-hidden="true"></i></a>
+</div>
+
+<div class="footcontainer">
+<h6 class="footext">Kalalau Cantrell</h6>
+<a href="https://github.com/klcantrell">
+	<i class="fa fa-github" aria-hidden="true"></i></a>
+<a href="https://twitter.com/kalalaucantrell?lang=en">
+	<i class="fa fa-twitter" aria-hidden="true"></i></a>
+</div>
+
+</footer>
 </html>
